--- a/style.css
+++ b/style.css
@@ -86,6 +86,8 @@ button:hover { background: #00b6a8; color: #fff;}
   box-shadow: 0 4px 18px #00bfa634;
 }
 #side-menu {
-  max-height: 90vh;
+  min-height: 100vh;
+  max-height: 100vh;
   overflow-y: auto;
 }
+
